Fixed
## 010 company name too big in mobile - nearly out of screen
## 016 intro in overview out of visible screen
## 017 contact section no bottom padding

Partially fixed

009 purge  css.style

--- a/styles.css/_contact.scss
+++ b/styles.css/_contact.scss
@@ -7,6 +7,7 @@
     padding-top: 7.8vw;
     color: #000000;
     @include large{padding-top: 117px;}
+    &__button{margin-bottom:60px;}
 }
 
 .contact__heading{
